Fixed issue where anchor area became smaller than icons when page got too small.

--- a/www/weapons.css
+++ b/www/weapons.css
@@ -27,6 +27,10 @@
 	padding-left:15px;
 	text-align:center;
 }
+.details a{
+	height:100%;
+	width:100%;
+}
 .details th{
 	padding-left:15px;
 }
